--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is a list of Products</h1>
+    <h1 class="display-4">List of Products from azure database</h1>
     <table class="table table-bordered">
         <thead>
             <tr>
